--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -9,15 +9,8 @@
     card_view:cardElevation="@dimen/margin_5"
     card_view:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/store_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/most_used_item_background">
-
-        <ImageView
-            android:id="@+id/store_image"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/deli_grocery_m" />
-    </RelativeLayout>
+        android:layout_height="match_parent" />
 </android.support.v7.widget.CardView>
