--- a/app/src/main/res/layout/store_offer_layout.xml
+++ b/app/src/main/res/layout/store_offer_layout.xml
@@ -25,8 +25,7 @@
                 android:layout_height="60dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/deli_grocery_m" />
+                android:scaleType="fitXY" />
 
             <LinearLayout
                 android:id="@+id/item_tag"
