--- a/app/src/main/res/layout/transaction_activity_layout.xml
+++ b/app/src/main/res/layout/transaction_activity_layout.xml
@@ -65,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="10 Paid | " />
+                android:text="10 Paid | "
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/total_item"
@@ -73,7 +74,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="1234 Due" />
+                android:text="1234 Due"
+                android:visibility="gone" />
         </LinearLayout>
 
         <android.support.design.widget.TabLayout
