--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/topLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/transparent_100"
     android:keepScreenOn="true"
     android:orientation="vertical">
 
@@ -11,22 +11,34 @@
         android:id="@+id/preview"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_gravity="center" />
+        android:layout_centerInParent="true" />
 
     <TextView
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:background="@drawable/camera_background" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_below="@+id/preview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/margin_10"
         android:gravity="center"
         android:padding="@dimen/margin_10"
         android:text="Please hold your mobile in the rectangle to capture code"
         android:textColor="@android:color/black" />
 
+    <ImageView
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_10"
+        android:layout_marginTop="@dimen/margin_20"
+        android:background="?selectableItemBackground"
+        android:padding="@dimen/margin_10"
+        app:srcCompat="@drawable/ic_chevron_left_black_24dp" />
 
-</FrameLayout>
+</RelativeLayout>
