--- a/app/src/main/res/layout/popular_item_layout.xml
+++ b/app/src/main/res/layout/popular_item_layout.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_width="140dp"
-    android:layout_height="100dp"
-    android:foreground="?selectableItemBackground"
-    card_view:cardCornerRadius="@dimen/margin_2"
-    card_view:cardElevation="@dimen/margin_5"
-    card_view:cardUseCompatPadding="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/round_item_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/margin_5"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="@dimen/margin_5">
 
-    <ImageView
-        android:id="@+id/store_image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</android.support.v7.widget.CardView>
+    <mastersunny.unitedclub.utils.CircleImageView
+        android:id="@+id/place_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/profile_image" />
+
+    <TextView
+        android:id="@+id/place_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_5"
+        android:text="Dhaka" />
+
+</LinearLayout>
