--- a/app/src/main/res/layout/exam_item_layout.xml
+++ b/app/src/main/res/layout/exam_item_layout.xml
@@ -12,32 +12,67 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="@dimen/margin_16">
+
+        <mastersunny.unitedclub.utils.CircleImageView
+            android:id="@+id/prescription_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:scaleType="centerCrop"
+            android:src="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/university_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_toRightOf="@+id/prescription_image"
+            android:ellipsize="end"
+            android:includeFontPadding="false"
+            android:maxLines="1"
+            android:text="" />
 
         <TextView
             android:id="@+id/exam_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/prescription_image"
-            android:ellipsize="end"
-            android:includeFontPadding="false"
-            android:maxLines="1"
-            android:text=""
-            android:textColor="#000000" />
-
-        <TextView
-            android:id="@+id/exam_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/exam_name"
+            android:layout_below="@id/university_name"
+            android:layout_marginLeft="@dimen/margin_16"
             android:layout_marginTop="@dimen/margin_2"
             android:layout_toRightOf="@+id/prescription_image"
             android:ellipsize="end"
             android:gravity="bottom"
-            android:maxLines="2"
+            android:maxLines="1"
             android:text=""
             android:textSize="@dimen/text_size_12" />
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/exam_name"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginTop="@dimen/margin_2"
+            android:layout_toRightOf="@+id/prescription_image"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/exam_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textAllCaps="false"
+                android:textColor="#00b84a"
+                android:visibility="gone" />
+
+        </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
