--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -12,13 +12,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/margin_16">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/room_image"
             android:layout_width="match_parent"
-            android:layout_height="148dp"
+            android:layout_height="180dp"
+            android:layout_marginLeft="@dimen/margin_3"
+            android:layout_marginRight="@dimen/margin_3"
             android:scaleType="centerCrop"
             android:src="@drawable/sylhet" />
 
@@ -27,6 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/room_image"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginRight="@dimen/margin_16"
             android:layout_marginTop="@dimen/margin_16"
             android:ellipsize="end"
             android:includeFontPadding="false"
@@ -39,6 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/title"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginRight="@dimen/margin_16"
             android:layout_marginTop="@dimen/margin_2"
             android:ellipsize="end"
             android:gravity="bottom"
@@ -50,6 +55,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/address"
+            android:layout_marginBottom="@dimen/margin_16"
+            android:layout_marginLeft="@dimen/margin_16"
+            android:layout_marginRight="@dimen/margin_16"
             android:layout_marginTop="@dimen/margin_2"
             android:orientation="horizontal">
 
