--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -62,9 +62,11 @@
 
                 <ImageView
                     android:id="@+id/map_image"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@color/colorPrimary" />
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/margin_20"
+                    app:srcCompat="@drawable/ic_map_big" />
 
                 <TextView
                     android:id="@+id/room_details"
@@ -115,7 +117,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_home" />
+                        app:srcCompat="@drawable/ic_wifi" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -139,7 +141,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_home" />
+                        app:srcCompat="@drawable/ic_tv" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -163,7 +165,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_home" />
+                        app:srcCompat="@drawable/ic_air_conditioner" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -191,7 +193,9 @@
                     android:id="@+id/lunch_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@color/colorPrimary" />
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/margin_6"
+                    app:srcCompat="@drawable/ic_lunch" />
 
                 <TextView
                     android:id="@+id/lunch_amount"
@@ -224,7 +228,9 @@
                     android:id="@+id/transport_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@color/colorPrimary" />
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/margin_5"
+                    app:srcCompat="@drawable/ic_bike" />
 
                 <TextView
                     android:id="@+id/transport_amount"
@@ -257,7 +263,9 @@
                     android:id="@+id/female_icon"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@color/colorPrimary" />
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/margin_5"
+                    app:srcCompat="@drawable/ic_woman" />
 
                 <TextView
                     android:id="@+id/femaile_text"
@@ -296,7 +304,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="adfiosdfjoidsjfiodsf" />
+                    android:text="" />
 
             </RelativeLayout>
 
