--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -318,7 +318,7 @@
                 android:layout_marginRight="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_16"
                 android:background="@drawable/button_selector"
-                android:text="Boom Room"
+                android:text="Book Room"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/text_size_16" />
