--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -78,6 +78,7 @@
                     android:text="" />
 
                 <TextView
+                    android:id="@+id/female_friendly_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
@@ -85,16 +86,18 @@
                     android:layout_marginLeft="@dimen/margin_16"
                     android:layout_marginTop="@dimen/margin_5"
                     android:layout_toRightOf="@+id/map_image"
-                    android:background="@color/colorPrimary"
+                    android:background="#ff1744"
                     android:paddingBottom="@dimen/margin_3"
                     android:paddingLeft="@dimen/margin_10"
                     android:paddingRight="@dimen/margin_10"
                     android:text="Female Friendly"
-                    android:textColor="@color/white" />
+                    android:textColor="@color/white"
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
             <LinearLayout
+                android:id="@+id/advantage_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
@@ -103,16 +106,19 @@
                 android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingTop="@dimen/margin_16"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:id="@+id/wifi_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/margin_16"
                     android:background="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:padding="@dimen/margin_10">
+                    android:padding="@dimen/margin_10"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -132,11 +138,12 @@
                     android:id="@+id/tv_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_16"
+                    android:layout_marginRight="@dimen/margin_16"
                     android:background="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:padding="@dimen/margin_10">
+                    android:padding="@dimen/margin_10"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -156,11 +163,11 @@
                     android:id="@+id/ac_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_16"
                     android:background="?selectableItemBackground"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:padding="@dimen/margin_10">
+                    android:padding="@dimen/margin_10"
+                    android:visibility="gone">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -187,7 +194,8 @@
                 android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingTop="@dimen/margin_16"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/lunch_icon"
@@ -222,7 +230,8 @@
                 android:paddingBottom="@dimen/margin_16"
                 android:paddingLeft="@dimen/margin_16"
                 android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
+                android:paddingTop="@dimen/margin_16"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/transport_icon"
@@ -249,41 +258,6 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/female_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:background="@color/white"
-                android:paddingBottom="@dimen/margin_16"
-                android:paddingLeft="@dimen/margin_16"
-                android:paddingRight="@dimen/margin_16"
-                android:paddingTop="@dimen/margin_16">
-
-                <ImageView
-                    android:id="@+id/female_icon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@color/colorPrimary"
-                    android:padding="@dimen/margin_5"
-                    app:srcCompat="@drawable/ic_woman" />
-
-                <TextView
-                    android:id="@+id/femaile_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/margin_16"
-                    android:layout_toRightOf="@id/female_icon"
-                    android:text="Female" />
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
                 android:id="@+id/amount_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -300,7 +274,7 @@
                     android:text="Amount Payable" />
 
                 <TextView
-                    android:id="@+id/amount"
+                    android:id="@+id/total_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
