--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -206,7 +206,7 @@
                     app:srcCompat="@drawable/ic_lunch" />
 
                 <TextView
-                    android:id="@+id/lunch_amount"
+                    android:id="@+id/lunch_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_16"
@@ -214,6 +214,7 @@
                     android:text="Add lunch / Dinner BDT 120" />
 
                 <CheckBox
+                    android:id="@+id/lunch_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
@@ -242,7 +243,7 @@
                     app:srcCompat="@drawable/ic_bike" />
 
                 <TextView
-                    android:id="@+id/transport_amount"
+                    android:id="@+id/transport_cost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/margin_16"
@@ -250,6 +251,7 @@
                     android:text="Transport Facilities BDT 120" />
 
                 <CheckBox
+                    android:id="@+id/transport_checkbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
