--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -30,7 +30,7 @@
             android:layout_alignBottom="@id/room_image"
             android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginLeft="@dimen/margin_16"
-            android:background="@color/colorPrimary"
+            android:background="#ff1744"
             android:paddingBottom="@dimen/margin_3"
             android:paddingLeft="@dimen/margin_10"
             android:paddingRight="@dimen/margin_10"
