--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -49,7 +49,7 @@
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:maxLines="1"
-            android:text="Title"
+            android:text="1 Seat Room"
             android:textSize="@dimen/text_size_18" />
 
         <TextView
@@ -63,7 +63,7 @@
             android:ellipsize="end"
             android:gravity="bottom"
             android:maxLines="1"
-            android:text="dfsfsdfdsfdsf"
+            android:text="address"
             android:textSize="@dimen/text_size_12" />
 
         <LinearLayout
