--- a/app/src/main/res/layout/room_item_layout.xml
+++ b/app/src/main/res/layout/room_item_layout.xml
@@ -80,7 +80,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price: "
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_size_20" />
 
             <TextView
                 android:id="@+id/room_cost"
@@ -88,14 +89,15 @@
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textAllCaps="false"
-                android:textColor="@color/colorPrimary" />
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_size_20" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:text="per person"
-                android:textColor="@color/toolbar_text_color" />
+                android:text="/Person"
+                android:textAllCaps="false"
+                android:textSize="@dimen/text_size_20" />
 
         </LinearLayout>
     </RelativeLayout>
