--- a/app/src/main/res/layout/activity_room_details.xml
+++ b/app/src/main/res/layout/activity_room_details.xml
@@ -261,6 +261,71 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/guest_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10"
+                android:background="@color/white"
+                android:paddingBottom="@dimen/margin_16"
+                android:paddingLeft="@dimen/margin_16"
+                android:paddingRight="@dimen/margin_16"
+                android:paddingTop="@dimen/margin_16">
+
+                <TextView
+                    android:id="@+id/guest_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:text="Persons" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/guest_text"
+                    android:text="(5+ years)"
+                    android:textSize="@dimen/text_size_12" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="@dimen/margin_16"
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/guest_count1"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/button_left_selector"
+                        android:gravity="center"
+                        android:text="1"
+                        android:textColor="@drawable/button_text_color" />
+
+                    <Button
+                        android:id="@+id/guest_count2"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/button__middle_selector"
+                        android:gravity="center"
+                        android:text="2"
+                        android:textColor="@color/white" />
+
+                    <Button
+                        android:id="@+id/guest_count3"
+                        android:layout_width="70dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/button_right_selector"
+                        android:gravity="center"
+                        android:text="3"
+                        android:textColor="@color/white" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/amount_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
